added state-based MLP

--- a/DQN/visualize_dqn.ipynb
+++ b/DQN/visualize_dqn.ipynb
@@ -384,9 +384,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f335c89f",
+   "metadata": {},
+   "source": [
+    "## Replay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "39e91522",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished in 2000 steps\n"
+     ]
+    }
+   ],
+   "source": [
+    "import imageio\n",
+    "from helper_DQN import transform_to_grayscale_and_normalize, scale_and_resize\n",
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "model_name = \"Prioritized_DDQN\"\n",
+    "\n",
+    "# load model\n",
+    "model = DQN_square(3)\n",
+    "model.load_state_dict(torch.load(f\"data/{model_name}.pth\", map_location=torch.device('cpu')))\n",
+    "model.eval()\n",
+    "\n",
+    "# initialize environment\n",
+    "env = gym.make(\"MountainCar-v0\", render_mode='rgb_array')\n",
+    "\n",
+    "env.reset()\n",
+    "stacked_images = []\n",
+    "# img = env.render()\n",
+    "# stacked_images.append(transform_to_grayscale_and_normalize(img))\n",
+    "\n",
+    "steps = 4\n",
+    "\n",
+    "# save video\n",
+    "frames = []\n",
+    "\n",
+    "transform = scale_and_resize()\n",
+    "\n",
+    "action = env.action_space.sample()\n",
+    "\n",
+    "stacked_images = []\n",
+    "for i in range(4):\n",
+    "    _, reward, terminated, _, _ = env.step(action)\n",
+    "    img = env.render()\n",
+    "    frames.append(img)\n",
+    "    img = transforms.ToTensor()(img)\n",
+    "    stacked_images.append(torch.squeeze(transform(img)))\n",
+    "\n",
+    "while True:\n",
+    "    X = torch.stack(stacked_images).unsqueeze(0)\n",
+    "\n",
+    "    if random.uniform(0,1) < 0.01:\n",
+    "        action = env.action_space.sample()\n",
+    "    else:\n",
+    "        action = model(X).max(1)[1].view(1, 1).item()\n",
+    "\n",
+    "    # take action\n",
+    "#     _, _, terminated, truncated, _ = env.step(action)\n",
+    "\n",
+    "    # update image stack with new state\n",
+    "    stacked_images = []\n",
+    "    terminated = False\n",
+    "    for i in range(4):\n",
+    "        _, reward, done, _, _ = env.step(action)\n",
+    "        if done:\n",
+    "            terminated = True\n",
+    "        img = env.render()\n",
+    "        frames.append(img)\n",
+    "        img = transforms.ToTensor()(img)\n",
+    "        stacked_images.append(torch.squeeze(transform(img)))\n",
+    "\n",
+    "    steps += 4\n",
+    "\n",
+    "    if terminated or steps >= 2000:  #truncated:\n",
+    "        print(f\"finished in {steps} steps\")\n",
+    "        imageio.mimsave(f'video/replay_{model_name}.gif', frames, fps=40)\n",
+    "        break\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3573709b",
+   "id": "12867d88",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -408,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
